--- a/src/main/webapp/preferences/preference.zul
+++ b/src/main/webapp/preferences/preference.zul
@@ -50,10 +50,29 @@ onCreate="idWindow2.loadValuesuser()" closable="true" width="400px">
  	</rows>
  </grid>
 
- <fisheyebar  style="margin:5px 200px;" attachEdge="top" 
-	        				itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	        				<fisheye id="idLabFis"  onClick="idWindow2.add()" image="${imgNext}"/>
-	        				<fisheye label="${lblMenTCancel}" image="${imgClose}" onClick="idWindow2.closeWindow()"/>
-				 		</fisheyebar>
+<div align="center">
+		<image  id="idNext" tooltiptext="${lblNext}" src="${imgNext}" onClick="idWindow2.add()"
+		width="40px" height="40px">
+			<attribute name="onMouseOver">
+				idNext.setWidth("60px");
+				idNext.setHeight("60px");
+			</attribute>
+			<attribute name="onMouseOut">
+				idNext.setWidth("40px");
+				idNext.setHeight("40px");
+			</attribute>
+		</image>
+		 <image  id="idCancel" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindow2.closeWindow()"
+		 width="40px" height="40px">
+			<attribute name="onMouseOver">
+				idCancel.setWidth("60px");
+				idCancel.setHeight("60px");
+			</attribute>
+			<attribute name="onMouseOut">
+				idCancel.setWidth("40px");
+				idCancel.setHeight("40px");
+			</attribute>
+		</image>
+	</div>
 </window>
 </zk>
